/*
 * This file is part of Astarte.
 *
 * Copyright 2022 SECO Mind Srl
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";
package astarteplatform.msghub;

import "google/protobuf/empty.proto";

/* Configuration message to be used to send configuration to the Astarte message hub. */
message ConfigMessage {
  string realm = 1;
  optional string device_id = 2;
  optional string credentials_secret = 3;
  string pairing_url = 4;
  optional string pairing_token = 5;
  uint32 grpc_socket_port = 6;
}

service MessageHubConfig {
  /* Set the configuration for the Astarte message hub. */
  rpc SetConfig (ConfigMessage) returns (google.protobuf.Empty);
}
